data/derived/comb/progs/unify/prog4416.ml.out
Characters 105-119:
  ((i+j)/10, t::((i+j) mod 10)) = a in
                ^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
